update to laravel 9

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,10 +1,12 @@
 APP_NAME=Barocco
 APP_ENV=local
-APP_KEY=base64:4vKy6Xn3BAi+h10u/dk7mtOMufHgBBxqtHWd7FRSFAU=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=https://shop.dmitrakovich.dev
 
 LOG_CHANNEL=stack
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=${COMPOSE_PROJECT_NAME}-mysql
@@ -21,20 +23,21 @@ DB_OLD_USERNAME=
 DB_OLD_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+CACHE_DRIVER=file
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_CLIENT=phpredis
-REDIS_PREFIX=
+MEMCACHED_HOST=127.0.0.1
+
 REDIS_HOST=${COMPOSE_PROJECT_NAME}-redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
@@ -58,3 +61,6 @@ CAPTHCA_SECRET=
 
 GOOGLE_TAG_MANAGER_ID=
 GOOGLE_TAG_MANAGER_ENABLED=false
+
+IGNITION_EDITOR=vscode
+IGNITION_LOCAL_SITES_PATH=
