--- a/src/composer.json
+++ b/src/composer.json
@@ -2,68 +2,48 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "keywords": ["framework", "laravel"],
     "license": "MIT",
     "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/dmitrakovich/laravel-medialibrary.git"
-        },
         {
             "type": "vcs",
             "url": "https://github.com/dmitrakovich/log-viewer.git"
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^8.0.2",
         "default-089/sxgeo": "0.16.*@dev",
-        "diglactic/laravel-breadcrumbs": "^6.0",
+        "diglactic/laravel-breadcrumbs": "^7.2",
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.8",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "giggsey/libphonenumber-for-php": "^8.12",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "irazasyed/telegram-bot-sdk": "^3.4",
+        "giggsey/libphonenumber-for-php": "8.12.47.1",
+        "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
         "jxlwqq/env-manager": "^0.1.0",
         "kalnoy/nestedset": "^6.0",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
         "laravel-admin-ext/helpers": "^2.0",
-        "laravel-admin-ext/log-viewer": "v1.0.6",
-        "laravel/framework": "^8.81",
-        "laravel/sanctum": "^2.12",
-        "laravel/tinker": "^2.0",
-        "laravie/serialize-queries": "^1.0",
-        "phpoffice/phpspreadsheet": "^1.23",
-        "predis/predis": "^1.1",
-        "sentry/sentry-laravel": "^2.9",
+        "laravel-admin-ext/log-viewer": "^1.0",
+        "laravel/framework": "^9.11",
+        "laravel/sanctum": "^2.14.1",
+        "laravel/tinker": "^2.7",
+        "laravie/serialize-queries": "^2.0",
+        "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
+        "sentry/sentry-laravel": "^2.12",
         "spatie/laravel-googletagmanager": "^2.6",
-        "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3",
-        "staudenmeir/eloquent-json-relations": "^1.5"
+        "spatie/laravel-medialibrary": "^10.3",
+        "staudenmeir/eloquent-json-relations": "^1.6"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
-        "laravel/breeze": "^1.4",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
+        "barryvdh/laravel-debugbar": "^3.6",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.9",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10",
+        "rector/rector": "^0.12.23",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -79,12 +59,13 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -92,5 +73,17 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
