--- a/src/package.json
+++ b/src/package.json
@@ -10,10 +10,8 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21.4",
-        "bootstrap": "^4.5.3",
-        "browser-sync": "^2.27.4",
-        "browser-sync-webpack-plugin": "^2.2.2",
+        "axios": "^0.27.2",
+        "bootstrap": "^4.6.1",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
         "laravel-mix": "^6.0.43",
@@ -29,6 +27,7 @@
     },
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
+        "autoprefixer": "10.4.5",
         "cropperjs": "^1.5.9",
         "libphonenumber-js": "^1.9.49",
         "mustache": "^4.2.0",
