--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '7.3'
+        php-version: '8.1'
     - uses: actions/checkout@v2
     # - uses: symfonycorp/security-checker-action@v2
     #   with:
@@ -50,45 +50,45 @@ jobs:
         php artisan job:dispatch SxGeoUpdateJob
         php artisan test
 
-    # - name: Deploy
-    #   run: |
-    #     mkdir -p ~/.ssh
-    #     touch ~/.ssh/key.pem
-    #     (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
-    #     chmod 700 ~/.ssh/key.pem
-    #     cd ../.deploy
-    #     php ./deployer.phar deploy
+    - name: Deploy
+      run: |
+        mkdir -p ~/.ssh
+        touch ~/.ssh/key.pem
+        (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
+        chmod 700 ~/.ssh/key.pem
+        cd ../.deploy
+        php ./deployer.phar deploy
 
-    - name: Deploy on stupid hosting
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        debug: true
-        script: |
-          cd ~/public_html
-          git checkout -f
-          git pull
-          cd src/
-          php ~/.local/bin/composer install --optimize-autoloader --no-dev
-          php artisan optimize
-          php artisan cache:clear
-          find ~ -type f -name "*.tar" -exec rm {} \;
+    # - name: Deploy on stupid hosting
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     username: ${{ secrets.USERNAME }}
+    #     password: ${{ secrets.PASSWORD }}
+    #     debug: true
+    #     script: |
+    #       cd ~/public_html
+    #       git checkout -f
+    #       git pull
+    #       cd src/
+    #       php ~/.local/bin/composer install --optimize-autoloader --no-dev
+    #       php artisan optimize
+    #       php artisan cache:clear
+    #       find ~ -type f -name "*.tar" -exec rm {} \;
 
-    - name: Sleep for 27 seconds
-      uses: jakejarvis/wait-action@master
-      with:
-        time: '27s'
+    # - name: Sleep for 27 seconds
+    #   uses: jakejarvis/wait-action@master
+    #   with:
+    #     time: '27s'
 
-    - name: Upload frontend js & css on hosting
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        source: "src/public/js/*,src/public/css/*,src/public/mix-manifest.json"
-        target: "~/public_html"
+    # - name: Upload frontend js & css on hosting
+    #   uses: appleboy/scp-action@master
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     username: ${{ secrets.USERNAME }}
+    #     password: ${{ secrets.PASSWORD }}
+    #     source: "src/public/js/*,src/public/css/*,src/public/mix-manifest.json"
+    #     target: "~/public_html"
 
     - name: Send success status
       uses: appleboy/telegram-action@master
