--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -54,10 +54,11 @@ jobs:
     - name: Deploy
       env:
         TEST_ENV_VAR: deploy123
-        PRODUCTION_HOST: $PRODUCTION_HOST
-        PRODUCTION_USERNAME123: ${{ env.PRODUCTION_USERNAME }}
-        PRODUCTION_PORT123: ${{ env.PRODUCTION_PORT }}
-        PRODUCTION_PATH: $PRODUCTION_PATH
+        PRODUCTION_HOST: ${{ env.PRODUCTION_HOST }}
+        PRODUCTION_USERNAME: ${{ secrets.PRODUCTION_USERNAME }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PRODUCTION_PORT: ${{ github.PRODUCTION_PORT }}
+        PRODUCTION_PATH: ${{ github.PRODUCTION_PATH }}
       run: |
         mkdir -p ~/.ssh
         touch ~/.ssh/key.pem
