--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -38,10 +38,10 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
-    - name: Install NPM dependencies
-      run: npm install
-    - name: Minify CSS and JS files
-      run: npm run production
+    # - name: Install NPM dependencies
+    #   run: npm install
+    # - name: Minify CSS and JS files
+    #   run: npm run production
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
@@ -51,24 +51,23 @@ jobs:
         php artisan job:dispatch SxGeoUpdateJob
         php artisan test
 
+    - name: Echo contex
+      run: echo "$GITHUB_CONTEXT"
+
     - name: Deploy
       env:
-        TEST_ENV_VAR: deploy123 // string(9) "deploy123"
-        PRODUCTION_HOST: ${{ env.PRODUCTION_HOST }} // string(0) ""
-        PRODUCTION_USERNAME: ${{ secrets.PRODUCTION_USERNAME }} // string(0) ""
-        USERNAME: ${{ secrets.USERNAME }} // string(11) "***"
-        PRODUCTION_PORT: ${{ github.PRODUCTION_PORT }} // string(0) ""
-        PRODUCTION_PATH: ${{ github.PRODUCTION_PATH }} // string(0) ""
+        TEST_ENV_VAR: deploy123
+        PRODUCTION_HOST: ${{ env.PRODUCTION_HOST }}
+        PRODUCTION_USERNAME: ${{ secrets.PRODUCTION_USERNAME }}
+        USERNAME: ${{ secrets.USERNAME }}
+        PRODUCTION_PORT: ${{ github.PRODUCTION_PORT }}
+        PRODUCTION_PATH: ${{ github.env.PRODUCTION_PATH }}
       run: |
         mkdir -p ~/.ssh
         touch ~/.ssh/key.pem
         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
         chmod 700 ~/.ssh/key.pem
         cd ../.deploy
-        echo $GITHUB_ACTION_PATH
-        echo $PRODUCTION_PORT
-        echo $PRODUCTION_USERNAME
-        echo $USERNAME
         php ./deployer.phar deploy
 
     # - name: Deploy on stupid hosting
