--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,9 +23,9 @@ jobs:
       with:
         php-version: '8.1'
     - uses: actions/checkout@v2
-    # - uses: symfonycorp/security-checker-action@v2
-    #   with:
-    #     lock: src/composer.lock
+    - uses: symfonycorp/security-checker-action@v2
+      with:
+        lock: src/composer.lock
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install composer dependencies
