--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,7 +12,7 @@ jobs:
   laravel-tests-and-deploy:
 
     runs-on: ubuntu-latest
-    environment: deploy
+    environment: production
     defaults:
       run:
         working-directory: ./src
@@ -56,10 +56,10 @@ jobs:
 
     - name: Deploy
       env:
-        DEPLOY_HOST: ${{ secrets.PRODUCTION_HOST }}
-        DEPLOY_USERNAME: ${{ secrets.PRODUCTION_USERNAME }}
-        DEPLOY_PORT: ${{ secrets.PRODUCTION_PORT }}
-        DEPLOY_PATH: ${{ secrets.PRODUCTION_PATH }}
+        DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+        DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+        DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
+        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
       run: |
         mkdir -p ~/.ssh
         touch ~/.ssh/key.pem
