--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -62,8 +62,7 @@ jobs:
         touch ~/.ssh/key.pem
         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
         chmod 700 ~/.ssh/key.pem
-        cd ../.deploy
-        php ./deployer.phar deploy
+        php ./src/vendor/bin/deployer.phar deploy
 
     # - name: Deploy on stupid hosting
     #   uses: appleboy/ssh-action@master
