--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install composer dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --optimize-autoloader --no-dev
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
@@ -38,8 +38,6 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
-    - name: Install composer dependencies
-      run: composer install --no-scripts
     # - name: Install NPM dependencies
     #   run: npm install
     # - name: Minify CSS and JS files
@@ -64,7 +62,7 @@ jobs:
         touch ~/.ssh/key.pem
         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
         chmod 700 ~/.ssh/key.pem
-        php ./src/vendor/bin/deployer.phar deploy
+        php ./vendor/bin/deployer.phar deploy
 
     # - name: Deploy on stupid hosting
     #   uses: appleboy/ssh-action@master
