--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Laravel
 
 on:
   push:
-    branches: [ master ]
+    branches: [ test ]
   pull_request:
-    branches: [ master ]
+    branches: [ test ]
   repository_dispatch:
     types: [ retry-* ]
 
@@ -12,7 +12,7 @@ jobs:
   laravel-tests-and-deploy:
 
     runs-on: ubuntu-latest
-    environment: production
+    environment: test
     defaults:
       run:
         working-directory: ./src
@@ -23,75 +23,48 @@ jobs:
       with:
         php-version: '8.1'
     - uses: actions/checkout@v2
-    # - uses: symfonycorp/security-checker-action@v2
-    #   with:
-    #     lock: src/composer.lock
+    - uses: symfonycorp/security-checker-action@v2
+      with:
+        lock: src/composer.lock
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install composer dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --optimize-autoloader --no-dev --quiet
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
+
     - name: Install NPM dependencies
       run: npm install
     - name: Minify CSS and JS files
       run: npm run production
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: |
-        php artisan migrate --force
-        php artisan job:dispatch SxGeoUpdateJob
-        php artisan test
+    - name: Remove node_modules folder
+      run: rm -R node_modules
+
+    # - name: Execute tests (Unit and Feature tests) via PHPUnit
+    #   env:
+    #     DB_CONNECTION: sqlite
+    #     DB_DATABASE: database/database.sqlite
+    #   run: |
+    #     mkdir -p database
+    #     touch database/database.sqlite
+    #     php artisan migrate --force
+    #     php artisan job:dispatch SxGeoUpdateJob
+    #     php artisan test
 
     - name: Deploy
       env:
-        TEST_ENV_VAR: deploy123
+        DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+        DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+        DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
+        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
       run: |
         mkdir -p ~/.ssh
         touch ~/.ssh/key.pem
         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
         chmod 700 ~/.ssh/key.pem
-        cd ../.deploy
-        php ./deployer.phar deploy
-
-    # - name: Deploy on stupid hosting
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.HOST }}
-    #     username: ${{ secrets.USERNAME }}
-    #     password: ${{ secrets.PASSWORD }}
-    #     debug: true
-    #     script: |
-    #       cd ~/public_html
-    #       git checkout -f
-    #       git pull
-    #       cd src/
-    #       php ~/.local/bin/composer install --optimize-autoloader --no-dev
-    #       php artisan optimize
-    #       php artisan cache:clear
-    #       find ~ -type f -name "*.tar" -exec rm {} \;
-
-    # - name: Sleep for 27 seconds
-    #   uses: jakejarvis/wait-action@master
-    #   with:
-    #     time: '27s'
-
-    # - name: Upload frontend js & css on hosting
-    #   uses: appleboy/scp-action@master
-    #   with:
-    #     host: ${{ secrets.HOST }}
-    #     username: ${{ secrets.USERNAME }}
-    #     password: ${{ secrets.PASSWORD }}
-    #     source: "src/public/js/*,src/public/css/*,src/public/mix-manifest.json"
-    #     target: "~/public_html"
+        php ./vendor/bin/deployer.phar deploy -vvv
 
     - name: Send success status
       uses: appleboy/telegram-action@master
@@ -99,7 +72,6 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: Success deploying ✅
-
 
 
   ##################################
