--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -65,7 +65,7 @@ jobs:
         touch ~/.ssh/key.pem
         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
         chmod 700 ~/.ssh/key.pem
-        php ./vendor/bin/deployer.phar deploy
+        php ./vendor/bin/deployer.phar deploy -v
 
     - name: Send success status
       uses: appleboy/telegram-action@master
