--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,110 +1,108 @@
-# name: Production
+name: Production
 
-# on:
-#   push:
-#     branches: [ master ]
-#   pull_request:
-#     branches: [ master ]
-#   repository_dispatch:
-#     types: [ retry-* ]
+on:
+  push:
+    branches: [ master-stub ]
+  repository_dispatch:
+    types: [ retry-* ]
 
-# jobs:
-#   laravel-tests-and-deploy:
+jobs:
+  laravel-tests-and-deploy:
 
-#     runs-on: ubuntu-latest
-#     environment: production
-#     defaults:
-#       run:
-#         working-directory: ./src
+    runs-on: ubuntu-latest
+    environment: production
+    defaults:
+      run:
+        working-directory: ./src
 
-#     steps:
-#     - name: Setup PHP
-#       uses: shivammathur/setup-php@v2
-#       with:
-#         php-version: '8.1'
-#     - uses: actions/checkout@v2
-#     - uses: symfonycorp/security-checker-action@v2
-#       with:
-#         lock: src/composer.lock
-#     - name: Copy .env
-#       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-#     - name: Install composer dependencies
-#       run: composer install --optimize-autoloader --no-dev --quiet
-#     - name: Generate key
-#       run: php artisan key:generate
-#     - name: Directory Permissions
-#       run: chmod -R 777 storage bootstrap/cache
+    steps:
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.1'
+    - uses: actions/checkout@v2
+    - uses: symfonycorp/security-checker-action@v2
+      with:
+        lock: src/composer.lock
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Install composer dependencies
+      run: composer install --optimize-autoloader --no-dev --quiet
+    - name: Generate key
+      run: php artisan key:generate
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
 
-#     - name: Install NPM dependencies
-#       run: npm install
-#     - name: Minify CSS and JS files
-#       run: npm run production
-#     - name: Remove node_modules folder
-#       run: rm -R node_modules
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Minify CSS and JS files
+      run: npm run production
+    - name: Remove node_modules folder
+      run: rm -R node_modules
 
-#     # !!! need mysql
-#     # - name: Execute tests (Unit and Feature tests) via PHPUnit
-#     #   env:
-#     #     DB_CONNECTION: sqlite
-#     #     DB_DATABASE: database/database.sqlite
-#     #   run: |
-#     #     mkdir -p database
-#     #     touch database/database.sqlite
-#     #     php artisan migrate --force
-#     #     php artisan job:dispatch SxGeoUpdateJob
-#     #     php artisan test
+    # !!! need mysql
+    # - name: Execute tests (Unit and Feature tests) via PHPUnit
+    #   env:
+    #     DB_CONNECTION: sqlite
+    #     DB_DATABASE: database/database.sqlite
+    #   run: |
+    #     mkdir -p database
+    #     touch database/database.sqlite
+    #     php artisan migrate --force
+    #     php artisan job:dispatch SxGeoUpdateJob
+    #     php artisan test
 
-#     - name: Deploy
-#       env:
-#         DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
-#         DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
-#         DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
-#         DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-#       run: |
-#         mkdir -p ~/.ssh
-#         touch ~/.ssh/key.pem
-#         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
-#         chmod 700 ~/.ssh/key.pem
-#         php ./vendor/bin/deployer.phar deploy
+    - name: Deploy
+      env:
+        DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+        DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+        DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
+        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
+      run: |
+        mkdir -p ~/.ssh
+        touch ~/.ssh/key.pem
+        (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
+        chmod 700 ~/.ssh/key.pem
+        php ./vendor/bin/deployer.phar deploy
 
-#     - name: Send success status
-#       uses: appleboy/telegram-action@master
-#       with:
-#         to: ${{ secrets.TELEGRAM_TO }}
-#         token: ${{ secrets.TELEGRAM_TOKEN }}
-#         message: Success deploying ✅
+    - name: Send success status
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: Success deploying ✅
 
 
-#   ##################################
-#   ### Run when a schedule failed ###
-#   ##################################
-#   # restart_when_failed:
-#   #   name: Restarts workflow if failed
-#   #   runs-on: ubuntu-latest
-#   #   if: failure() && github.event.client_payload.attempt < 5
-#   #   needs: laravel-tests-and-deploy
-#   #   steps:
-#   #     - name: Sleep for 1m 36s
-#   #       uses: jakejarvis/wait-action@master
-#   #       with:
-#   #         time: '96s'
+  ##################################
+  ### Run when a schedule failed ###
+  ##################################
+  # restart_when_failed:
+  #   name: Restarts workflow if failed
+  #   runs-on: ubuntu-latest
+  #   if: failure() && github.event.client_payload.attempt < 5
+  #   needs: laravel-tests-and-deploy
+  #   steps:
+  #     - name: Sleep for 1m 36s
+  #       uses: jakejarvis/wait-action@master
+  #       with:
+  #         time: '96s'
 
-#   #     - name: set attempt
-#   #       run: |
-#   #         ATTEMPT=${{ github.event.client_payload.attempt }}
-#   #         ATTEMPT=$([ -n "$ATTEMPT" ] && echo $((++ATTEMPT)) || echo 1)
-#   #         echo "attempt=$ATTEMPT" >> $GITHUB_ENV
+  #     - name: set attempt
+  #       run: |
+  #         ATTEMPT=${{ github.event.client_payload.attempt }}
+  #         ATTEMPT=$([ -n "$ATTEMPT" ] && echo $((++ATTEMPT)) || echo 1)
+  #         echo "attempt=$ATTEMPT" >> $GITHUB_ENV
 
-#   #     - name: Send retry status
-#   #       uses: appleboy/telegram-action@master
-#   #       with:
-#   #         to: ${{ secrets.TELEGRAM_TO }}
-#   #         token: ${{ secrets.TELEGRAM_TOKEN }}
-#   #         message: Failure deploy (${{ env.attempt }}) ❌ Rerun 🔄
+  #     - name: Send retry status
+  #       uses: appleboy/telegram-action@master
+  #       with:
+  #         to: ${{ secrets.TELEGRAM_TO }}
+  #         token: ${{ secrets.TELEGRAM_TOKEN }}
+  #         message: Failure deploy (${{ env.attempt }}) ❌ Rerun 🔄
 
-#   #     - name: Retry the workflow
-#   #       uses: peter-evans/repository-dispatch@v1
-#   #       with:
-#   #         token: ${{ secrets.API_WORKFLOW_KEY }}
-#   #         event-type: retry-${{ env.attempt }}
-#   #         client-payload: '{"ref": "${{ github.ref }}", "attempt": "${{ env.attempt }}"}'
+  #     - name: Retry the workflow
+  #       uses: peter-evans/repository-dispatch@v1
+  #       with:
+  #         token: ${{ secrets.API_WORKFLOW_KEY }}
+  #         event-type: retry-${{ env.attempt }}
+  #         client-payload: '{"ref": "${{ github.ref }}", "attempt": "${{ env.attempt }}"}'
