--- a/.github/workflows/production-rollback.yml
+++ b/.github/workflows/production-rollback.yml
@@ -24,13 +24,8 @@ jobs:
         DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
         DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
         DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-      # run: |
-      #   mkdir -p ~/.ssh
-      #   touch ~/.ssh/key.pem
-      #   (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
-      #   chmod 700 ~/.ssh/key.pem
       with:
-        private-key: ${{ secrets.PRIVATE_KEY }}
+        private-key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
         dep: rollback
 
     - name: Send success status
