--- a/.github/workflows/production-rollback.yml
+++ b/.github/workflows/production-rollback.yml
@@ -8,6 +8,9 @@ jobs:
   rollback:
     runs-on: ubuntu-latest
     environment: production
+    defaults:
+      run:
+        working-directory: ./src
 
     steps:
     - uses: actions/checkout@v2
@@ -16,17 +19,22 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
+    - name: Install composer dependencies
+      run: composer install --optimize-autoloader --no-dev --quiet
+
 
     - name: Rollback
-      uses: deployphp/action@v1
       env:
         DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
         DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
         DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
         DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-      with:
-        private-key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-        dep: rollback
+      run: |
+        mkdir -p ~/.ssh
+        touch ~/.ssh/key.pem
+        (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
+        chmod 700 ~/.ssh/key.pem
+        php ./vendor/bin/deployer.phar rollback
 
     - name: Send success status
       uses: appleboy/telegram-action@master
