--- a/.github/workflows/production-rollback.yml
+++ b/.github/workflows/production-rollback.yml
@@ -34,6 +34,7 @@ jobs:
         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
         chmod 700 ~/.ssh/key.pem
         php ./vendor/bin/deployer.phar rollback
+      # opcache clear!
 
     - name: Send success status
       uses: appleboy/telegram-action@master
