--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         php-version: '8.1'
     - uses: actions/checkout@v2
-    - uses: symfonycorp/security-checker-action@v2
+    # - uses: symfonycorp/security-checker-action@v2
       with:
         lock: src/composer.lock
     - name: Copy .env
