--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,8 +20,8 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
-    - uses: actions/checkout@v2
-    # - uses: symfonycorp/security-checker-action@v2
+    - uses: actions/checkout@v3
+    - uses: symfonycorp/security-checker-action@v3
       with:
         lock: src/composer.lock
     - name: Copy .env
