smstraffic dev version

--- a/src/.env.example
+++ b/src/.env.example
@@ -54,3 +54,8 @@ IGNITION_EDITOR=vscode
 IGNITION_LOCAL_SITES_PATH=
 
 SXGEO_TOKEN=
+
+SMSTRAFFIC_SMS_FROM=
+SMSTRAFFIC_LOGIN=
+SMSTRAFFIC_PASSWORD=
+SMSTRAFFIC_LOG_CHANNEL=smstraffic
