--- a/src/composer.json
+++ b/src/composer.json
@@ -16,10 +16,11 @@
         "default-089/sxgeo": "0.16.*@dev",
         "deployer/deployer": "v7.0.0-rc.8",
         "diglactic/laravel-breadcrumbs": "^7.2",
+        "dmitrakovich/smstraffic-for-laravel": "dev-main",
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.8",
         "giggsey/libphonenumber-for-php": "8.12.47.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.5",
         "jenssegers/agent": "^2.6",
         "jxlwqq/env-manager": "^0.1.0",
         "kalnoy/nestedset": "^6.0",
