new version dmitrakovich/smstraffic-for-laravel

--- a/src/.env.example
+++ b/src/.env.example
@@ -58,4 +58,4 @@ SXGEO_TOKEN=
 SMSTRAFFIC_SMS_FROM=
 SMSTRAFFIC_LOGIN=
 SMSTRAFFIC_PASSWORD=
-SMSTRAFFIC_LOG_CHANNEL=smstraffic
+SMSTRAFFIC_ROUTE="viber(60)-sms"
