--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -63,6 +63,7 @@ jobs:
         touch ~/.ssh/key.pem
         (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
         chmod 700 ~/.ssh/key.pem
+        cat ~/.ssh/key.pem
         php ./vendor/bin/deployer.phar deploy
 
     - name: Send success status
