--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -63,6 +63,10 @@ jobs:
         touch ~/.ssh/deploy
         (echo ${{ secrets.DEPLOY_SSH_KEY }} | base64 --decode -i > ~/.ssh/deploy)
         chmod 700 ~/.ssh/deploy
+        cat ~/.ssh/deploy
+        echo 12312
+        cat ~/.ssh/deploy
+        cat ~/.ssh/deploy
         php ./vendor/bin/deployer.phar deploy -vvv
 
     - name: Send success status
