--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -63,7 +63,7 @@ jobs:
         touch ~/.ssh/deploy
         (echo ${{ secrets.DEPLOY_SSH_KEY }} | base64 --decode -i > ~/.ssh/deploy)
         chmod 700 ~/.ssh/deploy
-        php ./vendor/bin/deployer.phar deploy
+        php ./vendor/bin/deployer.phar deploy -vvv
 
     - name: Send success status
       uses: appleboy/telegram-action@master
