install & setup league/flysystem-aws-s3-v3

--- a/src/.env.example
+++ b/src/.env.example
@@ -37,6 +37,11 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
+ACTIVE_STORAGE_ACCESS_KEY_ID=
+ACTIVE_STORAGE_SECRET_ACCESS_KEY=
+ACTIVE_STORAGE_BUCKET=
+ACTIVE_STORAGE_ENDPOINT=
+
 ADMIN_ROUTE_PREFIX=admin
 ADMIN_HTTPS=true
 
