hgrosh env.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -64,3 +64,7 @@ SMSTRAFFIC_SMS_FROM=
 SMSTRAFFIC_LOGIN=
 SMSTRAFFIC_PASSWORD=
 SMSTRAFFIC_ROUTE="viber(60)-sms"
+
+HGROSH_CLIENT_ID=
+HGROSH_SECRET_KEY=
+HGROSH_API_URL='https://api-epos.hgrosh.by/public/v1'
