--- a/src/.env.example
+++ b/src/.env.example
@@ -36,6 +36,7 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+BACKUP_INFO_MAIL_TO=
 
 ACTIVE_STORAGE_ACCESS_KEY_ID=
 ACTIVE_STORAGE_SECRET_ACCESS_KEY=
