--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.27.2",
+        "blade-formatter": "^1.31.0",
         "bootstrap": "^4.6.1",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
