--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -11,7 +11,7 @@ on:
         type: string
       message:
         description: 'Commit message'
-        default: Fix code styling
+        default: Fix code styling.
         type: string
 
 jobs:
@@ -21,6 +21,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
+          # token: ${{ secrets.PAT }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -52,4 +55,6 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: ${{ inputs.message }} || Format ${{ github.actor }} code
+          commit_message: ${{ inputs.message }} Format ${{ github.actor }} code
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
