--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -21,9 +21,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
+        # with:
           # ref: ${{ github.head_ref }}
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          # token: ${{ secrets.PAT }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -56,5 +56,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: ${{ inputs.message }} Format ${{ github.actor }} code
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
