--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -2,6 +2,7 @@ name: Fix code styling
 
 on:
   pull_request_target:
+    # types: [opened, synchronize, reopened]
   workflow_dispatch:
     inputs:
       php:
@@ -55,5 +56,3 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: ${{ inputs.message }} Format ${{ github.actor }} code
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.PAT }}
