--- a/src/package.json
+++ b/src/package.json
@@ -34,6 +34,7 @@
         "libphonenumber-js": "^1.9.49",
         "mustache": "^4.2.0",
         "recaptcha-v3": "^1.10.0",
-        "sortablejs": "^1.14.0"
+        "sortablejs": "^1.14.0",
+        "swiper": "^8.4.5"
     }
 }
