--- a/src/composer.json
+++ b/src/composer.json
@@ -33,6 +33,7 @@
         "laravel/tinker": "^2.7",
         "laravie/serialize-queries": "^2.0",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "php-ffmpeg/php-ffmpeg": "^1.1",
         "sentry/sentry-laravel": "^2.12",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-googletagmanager": "^2.6",
