--- a/src/.env.example
+++ b/src/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=app
 DB_USERNAME=login
 DB_PASSWORD=pass
 
+MS_DB_CONNECTION=sqlsrv
+MS_DB_HOST=localhost
+MS_DB_PORT=1433
+MS_DB_DATABASE=app
+MS_DB_USERNAME=sa
+MS_DB_PASSWORD=pass
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
