add ssh config to .env.example file

--- a/src/.env.example
+++ b/src/.env.example
@@ -22,6 +22,10 @@ MS_DB_DATABASE=app
 MS_DB_USERNAME=sa
 MS_DB_PASSWORD=pass
 
+SSH_1C_HOSTNAME=host
+SSH_1C_USER=user
+SSH_1C_PORT=port
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
