sms limits & config telegram log

--- a/src/.env.example
+++ b/src/.env.example
@@ -54,6 +54,9 @@ ACTIVE_STORAGE_SECRET_ACCESS_KEY=
 ACTIVE_STORAGE_BUCKET=
 ACTIVE_STORAGE_ENDPOINT=
 
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_CHAT_ID=
+
 ADMIN_ROUTE_PREFIX=admin
 ADMIN_HTTPS=true
 
