150. install & setup facebook api

--- a/src/.env.example
+++ b/src/.env.example
@@ -71,6 +71,11 @@ CAPTHCA_SECRET=
 GOOGLE_TAG_MANAGER_ID=
 GOOGLE_TAG_MANAGER_ENABLED=false
 
+FACEBOOK_ENABLED=false
+FACEBOOK_ACCOUNT_ID=
+FACEBOOK_PIXEL_ID=
+FACEBOOK_TOKEN=
+
 IGNITION_EDITOR=vscode
 IGNITION_LOCAL_SITES_PATH=
 
