--- a/src/.env.example
+++ b/src/.env.example
@@ -2,14 +2,14 @@ APP_NAME=Barocco
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://shop.dmitrakovich.dev
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=${COMPOSE_PROJECT_NAME}-mysql
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=app
 DB_USERNAME=login
@@ -35,7 +35,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=${COMPOSE_PROJECT_NAME}-redis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -58,7 +58,7 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_CHAT_ID=
 
 ADMIN_ROUTE_PREFIX=admin
-ADMIN_HTTPS=true
+ADMIN_HTTPS=false
 
 YANDEX_COUNTER_ID=
 YANDEX_TOKEN=
@@ -89,3 +89,8 @@ SMSTRAFFIC_ROUTE="viber(60)-sms"
 HGROSH_CLIENT_ID=
 HGROSH_SECRET_KEY=
 HGROSH_API_URL='https://api-epos.hgrosh.by/public/v1'
+
+# docker
+COMPOSE_PROJECT_NAME=barocco
+WWWUSER=1000
+WWWGROUP=1000
