fix `phpstan` action & test `coding-standards` config

--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -1,7 +1,7 @@
 name: Fix code styling
 
-on:
-  pull_request_target:
+on: [ push ]
+  # pull_request_target:
     # types: [opened, synchronize, reopened]
   workflow_dispatch:
     inputs:
