--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -5,13 +5,10 @@ on: [ push ]
 jobs:
   phpstan:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./src
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -23,4 +20,4 @@ jobs:
         run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Execute PHPStan
-        run: vendor/bin/phpstan analyse
+        run: src/vendor/bin/phpstan analyse
