38. increase phpstan lvl `0` -> `1`

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,9 @@
-# includes:
-#    - phpstan-baseline.neon
+includes:
+   - phpstan-baseline.neon
 
 parameters:
   phpVersion: 80120
-  level: 0
+  level: 1
   paths:
     - src/app
     - src/tests
