--- a/src/.env.example
+++ b/src/.env.example
@@ -81,9 +81,9 @@ IGNITION_LOCAL_SITES_PATH=
 
 SXGEO_TOKEN=
 
-SMSTRAFFIC_SMS_FROM=
-SMSTRAFFIC_LOGIN=
-SMSTRAFFIC_PASSWORD=
+SMSTRAFFIC_SMS_FROM=barocco.by
+SMSTRAFFIC_LOGIN=login
+SMSTRAFFIC_PASSWORD=pass
 SMSTRAFFIC_ROUTE="viber(60)-sms"
 
 HGROSH_CLIENT_ID=
